--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -4,6 +4,13 @@ label {
   }
 }
 
+.caret {
+  &.md {
+    border-top: 9px dashed;
+    border-right: 6px solid transparent;
+    border-left: 6px solid transparent;
+  }
+}
 
 .pos-rlt{position: relative}
 .pos-stc{position: static}
