--- a/app/jade/blog.jade
+++ b/app/jade/blog.jade
@@ -7,8 +7,44 @@ block main
     .banner
       h3.text-white.text-center Sapta Blog
 
-  .container.m-t-xl
-    .blog-post-list.row
+  .container.m-t-md
+
+    .col-md-6
+      .pull-right
+        .block-category-dropdown
+          label Category
+          .dropdown
+            a#dropdownCategory.block.dropdown-toggle(data-toggle="dropdown", aria-expanded="true")
+              span.block All Category
+              span.caret.md
+            ul.dropdown-menu(role="menu", aria-labelledby="dropdownCategory")
+              li(role="presentation")
+                a(role="menuitem", tabindex="-1", href="#") All Category
+                a(role="menuitem", tabindex="-1", href="#") International
+                a(role="menuitem", tabindex="-1", href="#") Asia
+                a(role="menuitem", tabindex="-1", href="#") Europe
+                a(role="menuitem", tabindex="-1", href="#") Indonesia
+                a(role="menuitem", tabindex="-1", href="#") Jiuzhaigou
+
+      .clearfix
+
+    .col-md-6
+      .block-sortby-dropdown
+        label Sort By
+        .dropdown
+          a#dropdownSortBy.block.dropdown-toggle(data-toggle="dropdown", aria-expanded="true")
+            span.block Newest
+            span.caret.md
+          ul.dropdown-menu(role="menu", aria-labelledby="dropdownSortBy")
+            li(role="presentation")
+              a(role="menuitem", tabindex="-1", href="#") Newest
+              a(role="menuitem", tabindex="-1", href="#") Latest
+              a(role="menuitem", tabindex="-1", href="#") Popular
+
+    .clearfix
+
+
+    .blog-post-list.row.m-t-md
 
       .post-item.col-md-6
         .pos-rlt.wrapping
@@ -75,7 +111,7 @@ block main
       .post-item.col-md-4
         .pos-rlt.wrapping
           figure
-            img(src="img/destinations/Bangka-Belitung.jpg", alt="")
+            img(src="img/destinations/<Bangka-Belitung></Bangka-Belitung>.jpg", alt="")
           mixin postHeader('Indonesia', 'The Best Beaches in Indonesia')
 
   .wrapper-lg.container.text-center.m-t-lg.m-b-lg
