blog details page

--- a/app/jade/blog.jade
+++ b/app/jade/blog.jade
@@ -111,7 +111,7 @@ block main
       .post-item.col-md-4
         .pos-rlt.wrapping
           figure
-            img(src="img/destinations/<Bangka-Belitung></Bangka-Belitung>.jpg", alt="")
+            img(src="img/destinations/Bangka-Belitung.jpg", alt="")
           mixin postHeader('Indonesia', 'The Best Beaches in Indonesia')
 
   .wrapper-lg.container.text-center.m-t-lg.m-b-lg
