--- a/app/less/web/tours.less
+++ b/app/less/web/tours.less
@@ -1,5 +1,6 @@
 .tour-detail-page,
-.tours-page {
+.tours-page,
+.blog-detail-page {
   .head-title {
     font-family: "Gotham Black";
     font-size: 30px;
