--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -3828,7 +3828,8 @@ html[xmlns] .flexslider .slides {
   color: #000;
 }
 .tour-detail-page .head-title,
-.tours-page .head-title {
+.tours-page .head-title,
+.blog-detail-page .head-title {
   font-family: "Gotham Black";
   font-size: 30px;
 }
@@ -4577,7 +4578,6 @@ html[xmlns] .flexslider .slides {
   background-color: #fcbc56;
   height: 135px;
   padding: 25px;
-  color: #393030;
   font-size: 18px;
   font-family: "Gotham Black";
 }
@@ -4588,6 +4588,12 @@ html[xmlns] .flexslider .slides {
 }
 .blog-post-list .post-item .post-header h3 {
   line-height: 24px;
+}
+.blog-post-list .post-item .post-header h3 a {
+  color: #393030;
+}
+.blog-post-list .post-item .post-header h3 a:hover {
+  color: #555555;
 }
 .block-category-dropdown,
 .block-sortby-dropdown {
@@ -4641,6 +4647,108 @@ html[xmlns] .flexslider .slides {
   font-weight: 300;
   font-family: "Gotham Book";
   font-size: 11px;
+}
+.blog-detail-page .post-image-featured {
+  height: 440px;
+  margin-bottom: 40px;
+  overflow: hidden;
+}
+.blog-detail-page .post-wrapping {
+  padding-bottom: 40px;
+  margin-bottom: 50px;
+}
+.social-share {
+  width: 320px;
+  padding-right: 40px;
+}
+.social-share .stButton .stFb,
+.social-share .stButton .stTwbutton,
+.social-share .stButton .stMainServices {
+  height: 25px;
+}
+.social-share .stButton .stBubble_count {
+  font-size: 12px;
+  padding-top: 5px;
+}
+.social-share .stButton .stBubble {
+  height: 30px;
+}
+.post-content {
+  width: 620px;
+}
+.post-content .post-detail p {
+  font-size: 12px;
+  color: #353535;
+  line-height: 24px;
+  margin-bottom: 10px;
+}
+.post-content .post-detail p.big-text,
+.post-content .post-detail p.text-lg {
+  font-size: 30px;
+  padding: 20px 0;
+  font-weight: 300;
+  font-family: "Gotham Rounded";
+}
+.post-content .post-meta {
+  font-family: "Gotham Black";
+  padding-top: 15px;
+  font-size: 11px;
+}
+.related-blog-post h4 {
+  font-size: 30px;
+  font-weight: 200;
+}
+.related-blog-post .post-item {
+  overflow-y: hidden;
+  position: relative;
+}
+.related-blog-post .post-item figure {
+  height: 245px;
+  margin-top: 10px;
+}
+.related-blog-post .post-item img {
+  width: 100%;
+  height: 100%;
+}
+.related-blog-post .post-item .post-header {
+  margin-bottom: 10px;
+  background-color: #fcbc56;
+  height: 135px;
+  padding: 25px;
+  font-size: 18px;
+  font-family: "Gotham Black";
+}
+.related-blog-post .post-item .post-header label {
+  color: #8f3000;
+  font-family: "Gotham Book";
+  font-size: 11px;
+}
+.related-blog-post .post-item .post-header h3 {
+  line-height: 24px;
+}
+.related-blog-post .post-item .post-header h3 a {
+  color: #393030;
+}
+.related-blog-post .post-item .post-header h3 a:hover {
+  color: #555555;
+}
+.related-blog-post .btn-show-more {
+  margin: 20px 0;
+  padding: 15px;
+  font-family: "Gotham Book";
+  font-size: 15px;
+  color: #393030;
+  background-image: -webkit-linear-gradient(top, #ffffff 5%, rgba(0, 0, 0, 0.08) 100%);
+  background-image: -o-linear-gradient(top, #ffffff 5%, rgba(0, 0, 0, 0.08) 100%);
+  background-image: linear-gradient(to bottom, #ffffff 5%, rgba(0, 0, 0, 0.08) 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#14000000', GradientType=0);
+  -webkit-box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.4), inset 0 -1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.4), inset 0 -1px 2px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+}
+.related-blog-post .btn-show-more strong {
+  font-family: "Gotham Black";
 }
 .datepicker {
   border-radius: 4px;
