--- a/app/less/web/blog.less
+++ b/app/less/web/blog.less
@@ -77,7 +77,7 @@
       background-color: #fcbc56;
       height: 135px;
       padding: 25px;
-      color: #393030;
+
       font-size: 18px;
       font-family: "Gotham Black";
 
@@ -89,6 +89,12 @@
 
       h3 {
         line-height: 24px;
+        a {
+          color: #393030;
+          &:hover {
+            color: @gray
+          }
+        }
       }
     }
   }
@@ -147,5 +153,106 @@
     font-weight: 300;
     font-family: "Gotham Book";
     font-size: 11px;
+  }
+}
+
+.blog-detail-page {
+  .post-image-featured {
+    height: 440px;
+    margin-bottom: 40px;
+    overflow: hidden;
+  }
+
+  .post-wrapping {
+    padding-bottom: 40px;
+    margin-bottom: 50px;
+  }
+}
+
+.social-share {
+  width: 320px;
+  padding-right: 40px;
+
+  .stButton .stFb,
+  .stButton .stTwbutton,
+  .stButton .stMainServices {
+    height: 25px;
+  }
+
+  .stButton .stBubble_count {
+    font-size: 12px;
+    padding-top: 5px
+  }
+
+  .stButton .stBubble {
+    height: 30px;
+  }
+}
+
+.post-content {
+  width: 620px;
+
+  .post-detail {
+    p {
+      font-size: 12px;
+      color: #353535;
+      line-height: 24px;
+      margin-bottom: 10px;
+
+      &.big-text,
+      &.text-lg {
+        font-size: 30px;
+        padding: 20px 0;
+        .text-rounded;
+      }
+    }
+  }
+
+  .post-meta {
+    font-family: "Gotham Black";
+    padding-top: 15px;
+    font-size: 11px;
+  }
+}
+
+.related-blog-post {
+  h4 {
+    font-size: 30px;
+    font-weight: 200
+  }
+
+  .post-item {
+    overflow-y: hidden;
+    position: relative;
+
+    figure {
+      height: 245px;
+      margin-top: 10px;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    .post-header {
+      .blog-post-list .post-item .post-header
+    }
+  }
+
+  .btn-show-more {
+    margin: 20px 0;
+    padding: 15px;
+    font-family: "Gotham Book";
+    font-size: 15px;
+    color: #393030;
+    #gradient > .vertical(#fff; rgba(0,0,0,0.08); 5%);
+    -webkit-box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.4), inset 0 -1px 2px rgba(0, 0, 0, 0.10);
+    box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.4), inset 0 -1px 2px rgba(0, 0, 0, 0.10);
+    text-decoration: none;
+
+    strong {
+      font-family: "Gotham Black"
+    }
   }
 }
