--- a/app/less/apps.less
+++ b/app/less/apps.less
@@ -2,6 +2,8 @@
 @import "bootstrap/variables.less";
 @import "bootstrap/mixins.less";
 
+@import "web/fonts.less";
+
 @import "helper/app.utilities.less";
 
 @import "helper/icons";
